--- a/Module1/8-LapTrinhHuongDoiTuong2/BaiTap/6-Remote-TV.html
+++ b/Module1/8-LapTrinhHuongDoiTuong2/BaiTap/6-Remote-TV.html
@@ -5,7 +5,7 @@
     <title>Remote va TV</title>
 </head>
 <body>
-<video id="tv" width="320" height="176" controls>
+<video id="tv" width="320" height="176" controls="controls" autoplay="true">
     <source src="" type="video/mp4">
 </video>
 <br>
